firmware/lib/control-table/tests/ui/region_missing_addr.stderr
error: Region requires `#[ct_region(addr = ...)]`
  --> tests/ui/region_missing_addr.rs:12:8
   |
12 | struct MissingAddr {
   |        ^^^^^^^^^^^
